--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.16.4",
+    "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "uniqid": "^5.3.0"
   }
 }
